# taxi-data

./: .gitignore  README.md
04_analytics-engineering/analytics_engineering/: .gitignore  README.md  dbt_project.yml  pyproject.toml
04_analytics-engineering/analytics_engineering/lessons/: 00_prerequisites_and_sql_refresher.md  01_analytics_engineering_and_dbt.md  02_environment_setup.md  03_project_structure.md  04_sources_and_staging_models.md  05_intermediate_models.md  06_seeds_and_macros.md  07_marts_fact_and_dimension_tables.md  08_tests_and_data_quality.md  09_documentation.md  10_packages.md  11_commands_reference.md  12_homework.md
04_analytics-engineering/analytics_engineering/macros/: get_trip_duration_minutes.sql  get_vendor_data.sql  macros_properties.yml
04_analytics-engineering/analytics_engineering/models/marts/: dim_vendors.sql  dim_zones.sql  fct_trips.sql  schema.yml
04_analytics-engineering/analytics_engineering/models/staging/: schema.yml  sources.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
04_analytics-engineering/analytics_engineering/scripts/: ingest_data.py
04_analytics-engineering/analytics_engineering/seeds/: seeds_properties.yml
04_analytics-engineering/analytics_engineering/snapshots/: snap_zones.sql
workshops/dlt/taxi-pipeline/: analysis.html  analysis.py  pyproject.toml  taxi_pipeline.py
workshops/dlt/tfl-pipeline/: .gitignore  analysis.py  pyproject.toml  tfl_air_quality_pipeline.py  tfl_bikes_pipeline.py  tfl_pipeline.py  tfl_pipeline_hello_world.py  tfl_pipeline_hello_world_query.py
(+82 files in other folders)
